# least_squares_curve_fit

./: .gitignore  CMakeLists.txt  README.md  install.sh  properties.ini  setup.py  uninstall.sh  useful.txt
data/: input.csv  output.csv  output_exp.csv  output_log.csv  output_poly.  output_poly.csv  output_sin.csv
doc/: document.aux  document.tex  document.toc  insert documentation.txt  useful.txt
include/: Exponential_Function.h  Exponential_Function.hpp  Function.hpp  Logarithmic_Function.h  Logarithmic_Function.hpp  Polynomial_Function.h  Polynomial_Function.hpp  Sinusoidal_Function.hpp
include/curve_fit/: least_squares.hpp
include/data_structures/functions/: Exponential_Function.hpp  Function.hpp  Logarithmic_Function.hpp  Point.hpp  Polynomial_Function.hpp
include/util/math/: linear_algebra.hpp  math.hpp
ini/: gui.ini  properties.ini
spike/: MakeDefaultInput.java  visit_zoo.py  zoo.cpp
spike/cpp/: test  test.cpp
spike/java/: MakeDefaultInput.java  TestData.java
spike/py/: check_box.py  example.py  properties.ini  properties.py
src/cpp/: main  main.cpp
src/cpp/curve_fit/: curve_fit.cpp  least_squares.cpp  least_squares_curve_fit.cpp  linear_algebra.cpp  math.cpp
src/cpp/data_structures/: Exponential_Function.cpp  Logarithmic_Function.cpp  Polynomial_Function.cpp  Sinusoidal_Function.cpp
src/cpp/exception/: nan_exception.cpp
src/cpp/file/: file.cpp
src/cpp/least_squares/: curve_fit.cpp  least_squares_exponential  least_squares_exponential.cpp  math.cpp  (+6 more)
src/py/: file_io.py  least_squares.py  main.py  plot.py  replace_me.py
(+23 files in other folders)
